--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</ul>
 	</div>
 </div>
-<span class="tempBy"> 2020 All Rights Reserved.</span>
+<span class="tempBy"> 2015 - 2021 All Rights Reserved.</span>
 
 <!--Scripts-->
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script> 
